syntax = "proto3";

package pb;

service StringService{
    rpc Concat(StringRequest) returns (StringReponse) {}
    rpc Diff(StringRequest) returns (StringReponse) {}
}

message StringRequest {
    string A = 1;
    string B = 2;
}

message StringReponse {
    string Ret = 1;
    string err = 2;
}